[fuzzy-match] コメント修正など